--- a/styles.css
+++ b/styles.css
@@ -10735,7 +10735,7 @@ textarea.form-control-lg {
 
 .text-secondary {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity));
 }
 
 .text-success {
@@ -16455,7 +16455,7 @@ body {
 
 .bg-gradient-primary-to-secondary {
   background-color: #0061f2 !important;
-  background-image: linear-gradient(135deg, #0061f2 0%, rgba(105, 0, 199, 0.8) 100%) !important;
+  background-image: linear-gradient(135deg, #808080 0%, rgba(128, 128, 128, 0.8) 50%) !important;
 }
 
 .bg-transparent-light {
